base form component

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -6,6 +6,8 @@
     height: 208px;
     width: 1440px;
 justify-content: space-between;
+margin-left: -8px;
+margin-right: -8px;
 }
 #logoHeaderLandingPage {
     height: 57px;
