--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -4,4 +4,8 @@
     width: 100%;
     height: 100%;
    margin-top: -8px;
+   flex-direction: column;
+   align-self: center;
+   align-content: center;
+   align-items: center;
 }
