--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -5,6 +5,7 @@
     height: 611px;
     width: 403px;
     margin: 24px;
+   
 }
 
 #bericht {
@@ -15,6 +16,7 @@
 #formComponentParent {
     height: 659px;
     width: 451px;
+    background-color: #FFFFFF;
 }
 
 h3,
