--- a/src/styles/Posts.scss
+++ b/src/styles/Posts.scss
@@ -1,5 +1,8 @@
 #PostsParent{
     height: 659px;
   width: 642px;
- 
+  margin-left: 24px;
+ padding-left: 24px;
+ padding-top: 24px;
+ background-color: #FFFFFF;
 }
