--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
-#Parent {
-    display: flex;
-    justify-content: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+html{
+    background-color: rgb(239, 239, 239);
     width: 100%;
-    height: 100%;
-   margin-top: -8px;
-   background-color: rgb(239, 239, 239);
 }
