--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -2,10 +2,14 @@
     height: 72px;
   width: 285px;
   background-image: url('../assets/postbanner.png');
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+align-items: end;
 }
 #bannerText{
-    height: 10px;
-  width: 43px;
+padding-left: 16px;
+padding-right: 16px;
   color: #FFFFFF;
   font-family: Inter;
   font-size: 8px;
@@ -18,6 +22,7 @@
     width: 285px;
     background-color: #FFFFFF;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
+    margin-left: 24px;
 }
 #postTitle{
     height: 29px;
