--- a/src/styles/Posts.scss
+++ b/src/styles/Posts.scss
@@ -1,8 +1,10 @@
 #PostsParent{
-    height: 659px;
+  display: flex;
+  height: 659px;
   width: 642px;
   margin-left: 24px;
  padding-left: 24px;
  padding-top: 24px;
  background-color: #FFFFFF;
+ flex-wrap: wrap;
 }
