--- a/src/styles/Posts.scss
+++ b/src/styles/Posts.scss
@@ -1,9 +1,28 @@
-#PostsParent{
-  display: flex;
-  width: 642px;
-  margin-left: 24px;
- padding-left: 24px;
- padding-top: 24px;
- background-color: #FFFFFF;
- flex-wrap: wrap;
+#postsView{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 64px;
+}
+
+#postsViewParent{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+#Parent{
+display: flex;
+flex-direction: column;
+}
+
+#pageNav{
+    height: 25px;
+    width: 322px;
+    background-color: black;
+}
+#pageNav{
+    margin-bottom: 64px;
+    margin-top: 24px;
 }
