styling corrections on Home

--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -55,3 +55,8 @@ width: 403px;
     height: auto;
     width: auto;
 }
+#formButton{
+    margin-top: 24px;
+    width: 202px;
+    align-self: center;
+}
