styling error on Post component fixed

--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -23,6 +23,7 @@ padding-right: 16px;
     background-color: #FFFFFF;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
     margin-left: 24px;
+    margin-bottom: 24px;
 }
 #postTitle{
     height: 29px;
