--- a/src/styles/Pagination.scss
+++ b/src/styles/Pagination.scss
@@ -15,6 +15,8 @@
 #paginationListChildren{
     color: black;
     text-decoration: none;
+    font-weight: 300;
+    font-size: 12px;
 }
 #paginationListNextPageButton{
     height: 19px;
@@ -25,10 +27,12 @@
     letter-spacing: 0;
     line-height: 19px;
     text-decoration: none;
+    width: 113px;
+    
 }
 #rightArrow{
     height: 19px;
   width: 10px;
-  color: #F27623;
+  filter: invert(61%) sepia(33%) saturate(4916%) hue-rotate(345deg) brightness(97%) contrast(95%);;
 }
 
