--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -47,3 +47,34 @@ padding-right: 16px;
 #postInfo{
     margin: 16px;
 }
+
+#bannerImg.is-loading,
+#postInfo.is-loading {
+  animation: 2s skeleton-loading linear infinite;
+}
+
+.skeleton-text {
+  background: #eee;
+  background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  border-radius: 5px;
+  background-size: 200% 100%;
+  animation: 1.5s shine linear infinite;
+}
+
+.skeleton-text#bannerText {
+  height: 10px;
+}
+
+.skeleton-text#postTitle {
+  height: 29px;
+}
+
+.skeleton-text#postContent {
+  height: 76px;
+}
+
+@keyframes skeleton-loading {
+  to {
+    background-position-x: -40%;
+  }
+}
