--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -111,13 +111,7 @@ input[type='file']::before {
   padding-top: 14px;
   padding-bottom: 14px;
 }
-#geen{
-    height: 15px;
-    width: 346px;
-    color: #C5C5C5;
-    font-family: Inter;
-    font-size: 12px;
-    font-style: italic;
-    letter-spacing: 0;
-    line-height: 15px;
+
+#title::placeholder{
+  font-style: italic;
 }
