--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -63,6 +63,8 @@ padding-right: 16px;
 
 .skeleton-text#bannerText {
   height: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .skeleton-text#postTitle {
