--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,3 +3,8 @@ html{
     background-color: rgb(239, 239, 239);
     width: 100%;
 }
+@media screen and (max-width: 1160px) {
+    html{
+   overflow-x: hidden;
+    }
+}
