--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -5,6 +5,13 @@ $colorSecondary: #404040;
 $colorBackground: #f5f5f5f1;
 $colorButtonBackground: #7D7D7D;
 
+@media screen and (max-width: 600px) {
+  #formComponent {
+    width: 90%;
+    margin: 24px auto;
+  }
+}
+
 #formComponent {
   display: flex;
   flex-direction: column;
@@ -114,4 +121,10 @@ input[type='file']::before {
 
 #title::placeholder{
   font-style: italic;
+}
+
+@media screen and (max-width: 1160px) {
+  #formComponentParent {
+    width: auto;
+  }
 }
