--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -31,3 +31,25 @@ margin-right: -8px;
    align-self: center;
    margin-left: -120px;
 }
+@media screen and (max-width: 1160px) {
+    #headerLandingPage {
+        background-image: url("../assets/Mask.png");
+        display: flex;
+       // flex-direction: column;
+        height: 208px;
+        width: auto;
+    justify-content: space-between;
+    margin-left: -8px;
+    margin-right: -8px;
+    }
+    #HeaderLandingPageNavMenu{
+        margin-top: 154px;
+        margin-right: 280px;
+    }
+    #logoHeaderLandingPage{
+        margin-left: 266px;
+    }
+    #headerTitleContainer{
+        margin-top: 15px
+    }
+}
