--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -8,8 +8,6 @@
    align-self: center;
    align-content: center;
    align-items: center;
-  
-  
 }
 
 #content{
@@ -17,4 +15,16 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 64px;
+}
+@media screen and (max-width: 1160px) {
+    #content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-self: center;
+        align-items: center;
+    }
+    #Parent{
+        overflow-x: hidden;
+    }
 }
