--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   height: 208px;
-  width: 1440px;
+  width: 100%;
   justify-content: space-between;
   margin-left: -8px;
   margin-right: -8px;
