--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100%;
-  margin-top: -8px;
+  min-height: 100vh;
   flex-direction: column;
   align-self: center;
   align-content: center;
@@ -31,4 +30,19 @@
   #Parent {
     overflow-x: hidden;
   }
+}
+
+#content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.Footer {
+  background-color: #f5f5f5;
+  padding: 20px;
+  text-align: center;
 }
