fixed footer location on larger screens for Blog page

--- a/src/styles/Posts.scss
+++ b/src/styles/Posts.scss
@@ -14,10 +14,11 @@
 }
 
 #Parent {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 #pageNav {
