--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 64px;
+  align-items: flex-start;
 }
 
 @media screen and (max-width: 1160px) {
@@ -39,6 +40,7 @@
   align-items: center;
   margin-top: 64px;
   margin-bottom: 64px;
+  align-items: flex-start;
 }
 
 .Footer {
