--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -136,3 +136,12 @@ input[type="file"]::before {
 .checkMark {
   margin-left: 10px;
 }
+#contentError {
+  font-family: Inter;
+  color: red;
+  //background-color: $colorSecondary;
+  font-size: 12px;
+  width: max-content;
+  // padding: 5px;
+  // border-radius: 10px;
+}
