--- a/src/styles/PostsComponent.scss
+++ b/src/styles/PostsComponent.scss
@@ -15,7 +15,6 @@
   flex-direction: column;
   width: 642px;
   margin-left: 24px;
-  padding-left: 24px;
   padding-top: 24px;
   background-color: #ffffff;
 }
@@ -37,5 +36,14 @@
     padding-left: 0px;
     width: 100%;
     align-items: center;
+  }
+}
+
+@media (min-width: 1441px) {
+  #PostsComponentParent {
+    width: 975px;
+  }
+  #PostsComponentParent {
+    padding-left: 24px;
   }
 }
