--- a/src/styles/Pagination.scss
+++ b/src/styles/Pagination.scss
@@ -35,3 +35,58 @@
   filter: invert(61%) sepia(33%) saturate(4916%) hue-rotate(345deg)
     brightness(97%) contrast(95%);
 }
+#paginationList {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: center;
+}
+
+#paginationListItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style-type: none;
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+#paginationListChildren {
+  color: black;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 12px;
+  border: none; /* Remove button border */
+  background: none; /* Remove button background */
+  cursor: pointer; /* Add cursor pointer */
+  padding: 0; /* Remove button padding */
+}
+
+#paginationListNextPageButton {
+  height: 19px;
+  width: 113px;
+  color: #f27623;
+  font-family: Inter;
+  font-size: 12px;
+  letter-spacing: 0;
+  line-height: 19px;
+  text-decoration: none;
+  background: none; /* Remove button background */
+  border: none; /* Remove button border */
+  cursor: pointer; /* Add cursor pointer */
+  padding: 0; /* Remove button padding */
+}
+
+#rightArrow {
+  height: 19px;
+  width: 10px;
+  filter: invert(61%) sepia(33%) saturate(4916%) hue-rotate(345deg)
+    brightness(97%) contrast(95%);
+}
+
+.activePage {
+  background-color: #b6b6b6;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 20%;
+}
