--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -7,7 +7,7 @@ $colorButtonBackground: #7d7d7d;
 
 @media screen and (max-width: 600px) {
   #formComponent {
-    width: 90%;
+    // width: 90%;
     margin: 24px auto;
   }
 }
