--- a/src/styles/PostsComponent.scss
+++ b/src/styles/PostsComponent.scss
@@ -34,7 +34,8 @@
     width: auto;
     margin-left: 0px;
     padding-left: 0px;
-    width: 100%;
+    //width: 100%;
+    padding: 16px;
     align-items: center;
   }
 }
