--- a/src/styles/NavMenu.scss
+++ b/src/styles/NavMenu.scss
@@ -36,13 +36,13 @@ a:hover {
     display: flex;
     // flex-direction: column;
     height: 208px;
-    width: auto;
+    width: 100%;
     justify-content: space-between;
     margin-left: -8px;
     margin-right: -8px;
   }
   #HeaderLandingPageNavMenu {
     margin-top: 154px;
-    margin-right: 280px;
+    margin-right: 20px;
   }
 }
