--- a/src/styles/PostsComponent.scss
+++ b/src/styles/PostsComponent.scss
@@ -31,11 +31,10 @@
     flex-direction: column;
     padding-top: 24px;
     background-color: #ffffff;
-    width: auto;
+    width: 90%;
     margin-left: 0px;
     padding-left: 0px;
-    //width: 100%;
-    padding: 16px;
+    // padding: 16px;
     align-items: center;
   }
 }
